Deployment config files set

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,10 +19,13 @@ test: &test
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: wheretoski_production
   pool: 5
   timeout: 5000
+  username: wheretoski
+  pass: ENV["DB_PASS"]
 
 cucumber:
   <<: *test
