updated unix settings in sublime and recreated files

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ production:
   pool: 5
   timeout: 5000
   username: wheretoski
-  pass: ENV["DB_PASS"]
+  password: ENV["DB_PASS"]
 
 cucumber:
   <<: *test
