--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream unicorn {
 
 server {
   listen 80 default deferred;
-  # server_name example.com;
+  server_name wheretoski.co;
   root /home/deployer/apps/wheretoski/current/public;
 
   location ^~ /assets/ {
