some updates for asset precompile

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,6 +8,7 @@ server {
   root /home/deployer/apps/wheretoski/current/public;
 
   location ^~ /assets/ {
+    root /home/deployer/apps/wheretoski/current/public;
     gzip_static on;
     expires max;
     add_header Cache-Control public;
